--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="head">
         <nav class="navbar">
             <div class="image">
-                <img src="./cameralogo.png">
+                <span class="fa-solid fa-camera cam"></span>
                 <h4>IMAGE</h4>
             </div>
             <ul class="nav">
