--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photographer's Blog </title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/81831682c9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,28 +48,32 @@
         <div class="box">
             <img
                 src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=974&q=80">
-            <img src="cameralogo.png" class="himg">
+            <i class="fa-solid fa-camera"></i>
         </div>
         <div class="box">
             <img
                 src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
-            img src="cameralogo.png" class="himg">
+                <i class="fa-solid fa-camera"></i>
         </div>
         <div class="box">
             <img
                 src="https://images.unsplash.com/photo-1470252649378-9c29740c9fa8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60">
+                <i class="fa-solid fa-camera"></i>
         </div>
         <div class="box">
             <img
                 src="https://images.unsplash.com/photo-1500518928030-5e56ea44798a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
+                <i class="fa-solid fa-camera"></i>
         </div>
         <div class="box">
             <img
             src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=974&q=80">
+            <i class="fa-solid fa-camera"></i>
        </div>
         <div class="box">
             <img
             src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=974&q=80">
+            <i class="fa-solid fa-camera"></i>
        </div>
     </section>
     <br><br>
